Comments added as embedded documents to posts

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -136,6 +143,55 @@ body {
     text-align: center;
 }
 
+.comment{
+    padding: 2px;
+    box-sizing: content-box;
+    display: block;
+    width: 500px;
+     margin: 0 auto;
+    font-size: 12px;
+}
+
+.innerComment{
+    padding: 7px;
+    background-color: WhiteSmoke;
+}
+
+.comment .singature{
+    text-align: right;
+    display: block;
+}
+
+.comment input{
+    width: 100%;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: grey;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: grey;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: grey;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: grey;
+}
+
+:focus::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #d9d9d9;
+}
+:focus::-moz-placeholder:focus { /* Firefox 19+ */
+  color: #d9d9d9;
+}
+:focus:-ms-input-placeholder:focus { /* IE 10+ */
+  color: #d9d9d9;
+}
+:focus:-moz-placeholder:focus { /* Firefox 18- */
+  color: #d9d9d9;
+}
+
 
 /*
 .blogPosts
@@ -149,6 +205,14 @@ body {
   padding-left: 4px;
   font-size: 14px;
 } */
+
+.bold{
+    font-weight: bold;
+}
+
+.roundCorners{
+  border-radius: 7px;
+}
 
 .red{
     color: red;
