--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,24 @@
+*{
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+
+input,
+textarea {
+  font-family: lucida sans, sans, verdana;
+  resize: none;
+  padding-left:0;
+  padding-right:0;
 }
 
 body {
@@ -71,7 +87,7 @@ body {
     float: left;
     width: 140px;
     margin-right: 4px;
-    margin-left: 3px;
+    margin-left: 10px;
 }
 
 .signin {
@@ -166,6 +182,37 @@ body {
     width: 100%;
 }
 
+.posteditor{
+  width: 98%;
+  margin: 0 auto;
+}
+
+.posteditor .inputContainer{
+  padding: 1px;
+}
+
+.posteditor textarea{
+  width: 100%;
+  height: 100px;
+}
+
+.posteditor .text{
+  width: 100%;
+}
+
+.posteditor .location{
+  width: 25%;
+}
+
+.posteditor .titleEditor{
+  font-size: 24px;
+}
+
+.posteditor .singature{
+  text-align: right;
+  display: block;
+}
+
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: grey;
 }
@@ -226,7 +273,7 @@ body {
 .spinner {
   width: 40px;
   height: 40px;
-  margin: 100px auto;
+  margin: 0 auto;
   background-color: #333;
 
   border-radius: 100%;  
