--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -9,16 +9,15 @@ input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+  outline: none;
 }
-
 
 input,
 textarea {
   font-family: lucida sans, sans, verdana;
   resize: none;
-  padding-left:0;
-  padding-right:0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 body {
@@ -29,46 +28,46 @@ body {
 }
 
 #root {
-    font-family: lucida sans, sans, verdana;
-    margin-left: auto;
-    margin-right: auto;
-    width: 900px;
-    height: 650px;
-    text-align: left;
-    background-repeat: no-repeat;
-    background-image: url(images/bakgrund5.png);
+  font-family: lucida sans, sans, verdana;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  height: 650px;
+  text-align: left;
+  background-repeat: no-repeat;
+  background-image: url(images/bakgrund5.png);
 }
 
-#header{
+#header {
   height: 150px;
 }
 
-#header_top{
+#header_top {
   height: 75px;
 }
 
-#header_bottom{
-    color: #fb2a2a;
-    font-weight: bold;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: 25px;
-    text-align: center;
+#header_bottom {
+  color: #fb2a2a;
+  font-weight: bold;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 25px;
+  text-align: center;
 }
 
 #container {
-    width: 300px;
-    margin: auto;
+  width: 300px;
+  margin: auto;
 }
 
 #left {
-    text-align: left;
-    font-size: 14px;
-    float: left;
-    width: 140px;
-    margin-right: 4px;
-    margin-left: 3px;
-    background-color: white;
+  text-align: left;
+  font-size: 14px;
+  float: left;
+  width: 140px;
+  margin-right: 4px;
+  margin-left: 3px;
+  background-color: white;
 }
 
 #center {
@@ -82,44 +81,58 @@ body {
 }
 
 #right {
-    text-align: left;
-    font-size: 14px;
-    float: left;
-    width: 140px;
-    margin-right: 4px;
-    margin-left: 10px;
+  text-align: left;
+  font-size: 14px;
+  float: left;
+  width: 140px;
+  margin-right: 4px;
+  margin-left: 10px;
 }
 
-.signin {
-    width: 140px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    background-color: white;
+.login {
+  width: 140px;
+  min-height: 98px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  background-color: white;
 }
 
-.signin input {
-    width: 95%;
-    margin-left: 4px;
-    margin-bottom: 4px;
-    box-sizing: border-box;
+.login .error
+{
+  font-size: 11px;
+  margin-bottom: 20px;
+  font-style: normal;
+  color: red;
+  padding: 4px;
 }
 
-.signin button {
-    width: 95%;
-    margin-left: 4px;
-    margin-bottom: 4px;
-    box-sizing: border-box;
+.login .spinner {
+  position: relative;
+  top: 25px;
+}
+
+.login input {
+  width: 95%;
+  margin-left: 4px;
+  margin-bottom: 4px;
+  box-sizing: border-box;
+}
+
+.login button {
+  width: 95%;
+  margin-left: 4px;
+  margin-bottom: 4px;
+  box-sizing: border-box;
 }
 
 .calendar {
-    padding-left: 5px;
-    width: 135px;
-    margin-left: 1px;
-    background-color: white;
+  padding-left: 5px;
+  width: 135px;
+  margin-left: 1px;
+  background-color: white;
 }
 
-.menu
-{
+.menu {
   text-align: left;
   margin-bottom: 4px;
   margin-top: 4px;
@@ -132,8 +145,7 @@ body {
   font-size: 14px;
 }
 
-.menuItem
-{
+.menuItem {
   display: block;
 }
 
@@ -141,104 +153,109 @@ body {
   text-decoration: none;
 }
 
-.menuItem a:hover
-{
+.menuItem a:hover {
   text-decoration: underline;
 }
 
-.editor{
-    text-align: center;
+.editor {
+  text-align: center;
 }
-.editor textarea
-{
+.editor textarea {
   width: 250px;
   height: 250px;
 }
 
-.errorMessage{
-    text-align: center;
+.errorMessage {
+  text-align: center;
 }
 
-.comment{
-    padding: 2px;
-    box-sizing: content-box;
-    display: block;
-    width: 500px;
-     margin: 0 auto;
-    font-size: 12px;
-}
-
-.innerComment{
-    padding: 7px;
-    background-color: WhiteSmoke;
-}
-
-.comment .singature{
-    text-align: right;
-    display: block;
-}
-
-.comment input{
-    width: 100%;
-}
-
-.posteditor{
-  width: 98%;
+.comment {
+  padding: 2px;
+  box-sizing: content-box;
+  display: block;
+  width: 500px;
   margin: 0 auto;
+  font-size: 12px;
 }
 
-.posteditor .inputContainer{
-  padding: 1px;
+.innerComment {
+  padding: 7px;
+  background-color: WhiteSmoke;
 }
 
-.posteditor textarea{
-  width: 100%;
-  height: 100px;
-}
-
-.posteditor .text{
-  width: 100%;
-}
-
-.posteditor .location{
-  width: 25%;
-}
-
-.posteditor .titleEditor{
-  font-size: 24px;
-}
-
-.posteditor .singature{
+.comment .singature {
   text-align: right;
   display: block;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+.comment input {
+  width: 100%;
+}
+
+.posteditor {
+  width: 98%;
+  margin: 0 auto;
+}
+
+.posteditor .inputContainer {
+  padding: 1px;
+}
+
+.posteditor textarea {
+  width: 100%;
+  height: 100px;
+}
+
+.posteditor .text {
+  width: 100%;
+}
+
+.posteditor .location {
+  width: 25%;
+}
+
+.posteditor .titleEditor {
+  font-size: 24px;
+}
+
+.posteditor .singature {
+  text-align: right;
+  display: block;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
   color: grey;
 }
-::-moz-placeholder { /* Firefox 19+ */
+::-moz-placeholder {
+  /* Firefox 19+ */
   color: grey;
 }
-:-ms-input-placeholder { /* IE 10+ */
+:-ms-input-placeholder {
+  /* IE 10+ */
   color: grey;
 }
-:-moz-placeholder { /* Firefox 18- */
+:-moz-placeholder {
+  /* Firefox 18- */
   color: grey;
 }
 
-:focus::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+:focus::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
   color: #d9d9d9;
 }
-:focus::-moz-placeholder:focus { /* Firefox 19+ */
+:focus::-moz-placeholder:focus {
+  /* Firefox 19+ */
   color: #d9d9d9;
 }
-:focus:-ms-input-placeholder:focus { /* IE 10+ */
+:focus:-ms-input-placeholder:focus {
+  /* IE 10+ */
   color: #d9d9d9;
 }
-:focus:-moz-placeholder:focus { /* Firefox 18- */
+:focus:-moz-placeholder:focus {
+  /* Firefox 18- */
   color: #d9d9d9;
 }
-
 
 /*
 .blogPosts
@@ -253,21 +270,21 @@ body {
   font-size: 14px;
 } */
 
-.bold{
-    font-weight: bold;
+.bold {
+  font-weight: bold;
 }
 
-.roundCorners{
+.roundCorners {
   border-radius: 7px;
 }
 
-.red{
-    color: red;
+.red {
+  color: red;
 }
 
-.title{
-    color: red;
-    font-size: 24px;
+.title {
+  color: red;
+  font-size: 24px;
 }
 
 .spinner {
@@ -276,26 +293,29 @@ body {
   margin: 0 auto;
   background-color: #333;
 
-  border-radius: 100%;  
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-  animation: sk-scaleout 1.0s infinite ease-in-out;
+  border-radius: 100%;
+  -webkit-animation: sk-scaleout 1s infinite ease-in-out;
+  animation: sk-scaleout 1s infinite ease-in-out;
 }
 
 @-webkit-keyframes sk-scaleout {
-  0% { -webkit-transform: scale(0) }
+  0% {
+    -webkit-transform: scale(0);
+  }
   100% {
-    -webkit-transform: scale(1.0);
+    -webkit-transform: scale(1);
     opacity: 0;
   }
 }
 
 @keyframes sk-scaleout {
-  0% { 
+  0% {
     -webkit-transform: scale(0);
     transform: scale(0);
-  } 100% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
     opacity: 0;
   }
 }
