Feedback when password is changed

--- a/client/src/components/MyProfile/PasswordEditor.scss
+++ b/client/src/components/MyProfile/PasswordEditor.scss
@@ -4,12 +4,19 @@
   td {
     width: 50%;
   }
+  .save-row
+  {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+  }
+  .message
+  {
+    min-width: 300px;
+  }
   .save {
     margin-right: 10%;
     float: right;
     display: block;
-  }
-  .errorMessage{
-    display: inline;
   }
 }
