--- a/client/src/components/MyProfile/UserEditor.scss
+++ b/client/src/components/MyProfile/UserEditor.scss
@@ -1,16 +1,22 @@
 .UserEditor {
-    padding: 10px;
-    width: 100%;
-    td {
-      width: 50%;
-    }
-    .save {
-      margin-right: 10%;
-      float: right;
-      display: block;
-    }
-    .errorMessage{
-      display: inline;
-    }
+  padding: 10px;
+  width: 100%;
+  td {
+    width: 50%;
   }
-  
+  .save-row
+  {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+  }
+  .message
+  {
+    min-width: 300px;
+  }
+  .save {
+    margin-right: 10%;
+    float: right;
+    display: block;
+  }
+}
