--- a/client/src/Theme.scss
+++ b/client/src/Theme.scss
@@ -1,5 +1,6 @@
 $fonts: lucida sans, sans, verdana;
 $red: #fb2a2a;
 $green: green;
+$grey: WhiteSmoke;
 $transparent-overlay: rgba(0,0,0,0.3);
 $borderRadius: 7px;
