--- a/client/src/components/AlbumList/Editor/AlbumEditor.scss
+++ b/client/src/components/AlbumList/Editor/AlbumEditor.scss
@@ -1,3 +1,18 @@
+// Main Editor
+
+.albumeditor .controls
+{
+  display: flex;
+  direction: row;
+}
+.albumeditor .status
+{
+  width: 300px;
+  height: 20px;
+}
+
+
+//
 .albumEditorExistingItem {
   display: flex;
   direction: row;
